--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,6 @@
-; PORT = 4000
-MONGODB_URL = "mongodb+srv://seethapaul:seethapaul@cluster0.noa7ccg.mongodb.net"
+
+MONGODB_URL="mongodb+srv://seethapaul:seethapaul@cluster0.noa7ccg.mongodb.net"
+
+EMAIL_USER=sammiee2000@gmail.com
+EMAIL_PASS=uvva cflw oann yjnp
+ADMIN_EMAIL=sammiee2000@gmail.com
