--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "author": "Himanshu Maharshi",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
